--- a/30_example_gee_BtheB.Rmd
+++ b/30_example_gee_BtheB.Rmd
@@ -1,6 +1,8 @@
 # GEE, Continuous Outcome: Beat the Blues
 
+## Packages
 
+### CRAN
 
 ```{r, message=FALSE, error=FALSE}
 library(tidyverse)    # all things tidy
@@ -9,6 +11,8 @@ library(furniture)    # nice table1() descriptives
 library(texreg)       # Convert Regression Output to LaTeX or HTML Tables
 library(psych)        # contains some useful functions, like headTail
 
+library(interactions)
+library(performance)
 library(lme4)         # Linear, generalized linear, & nonlinear mixed models
 
 library(corrplot)     # Vizualize correlation matrix
@@ -19,11 +23,38 @@ library(MuMIn)        # Multi-Model Inference (caluclate QIC)
 library(HSAUR)        # package with the dataset
 ```
 
-## Prepare and get to know the dataset
+### GitHub
 
-### Read in the data
+Helper `extract` functions for exponentiation of parameters form generalized regression models within a `texreg` table of model parameters.
 
-This data set is in the **HSAUR** package.  It is from a clinical trial of an interactive multimedia program called 'Beat the Blues'. The variables are as follows:   
+```{r, message=FALSE, error=FALSE}
+# remotes::install_github("sarbearschwartz/texreghelpr") # first time
+
+library(texreghelpr)
+```
+
+
+## Background
+
+
+> This dataset was used as an example in Chapter 11 of "A Handbook of Statistical Analysis using R" by Brian S. Everitt and Torsten Hothorn.  The authors include this data set in their **HSAUR** package on `CRAN`. 
+
+
+**The Background**
+
+
+"These data resulted from a clinical trial of an interactive multimedia program called 'Beat the Blues' designed to deliver cognitive behavioral therapy (CBT) to depressed patients via a computer terminal.  Full details are given [here: Proudfoot et. al (2003)](https://www.cambridge.org/core/journals/psychological-medicine/article/computerized-interactive-multimedia-cognitivebehavioural-program-for-anxiety-and-depression-in-general-practice/6FF75F9283DF2209226D8910921F5307), but in essence Beat the Blues is an interactive program using multimedia techniques, in particular video vignettes."
+
+"In a randomized controlled trial of the program, patients with depression recruited in primary care were randomized to either the Beating the Blues program or to "Treatment as Usual" (TAU). Patients randomized to the BEat the Blues also received pharmacology and/or general practice (GP) support and practical/social help,offered as part of treatment as usual, with the exception of any face-to-face counseling or psychological intervention.  Patients allocated to TAU received whatever treatment their GP prescribed.  The latter included, besides any medication, discussion of problems with GP, provisions of practical/social help, referral to a counselor, referral to a practice nurse, referral to mental health professionals, or further physical examination.
+
+**The Research Question**
+
+Net of other factors (use of antidepressants and length of the current episode), does the Beat-the-Blues program results in better depression trajectories over treatment as usual?
+
+
+**The Data**
+
+The variables are as follows:   
 
   * `drug` did the patient take anti-depressant drugs (No or Yes)    
   * `length`  the length of the current episode of depression, a factor with levels:    
@@ -39,6 +70,8 @@ This data set is in the **HSAUR** package.  It is from a clinical trial of an in
   * `bdi.8m` Beck Depression Inventory II, after 8 months    
 
 
+### Read in the data
+
 ```{r}
 data(BtheB, package = "HSAUR")
 
@@ -47,7 +80,9 @@ BtheB %>%
 ```
 
 
-### Tidy up the dataset
+### Wide Format
+
+Tidy up the dataset
 
 **WIDE format**
 * One line per person
@@ -67,7 +102,9 @@ btb_wide %>%
   psych::headTail(top = 10, bottom = 10) 
 ```
 
-### Restructure to long format
+### Long Format
+
+Restructure to long format
 
 **LONG FORMAT**
 * One line per observation
@@ -91,6 +128,7 @@ btb_long %>%
   psych::headTail(top = 10, bottom = 10) 
 ```
 
+## Exploratory Data Analysis
 
 ### Visualize: Person-profile Plots
 
@@ -364,7 +402,10 @@ effects::Effect(c("treatment", "month", "drug"),
 
 ## General Estimating Equations, GEE
 
-### Fit the models - Main effects to determine correlation structure
+### Explore Various Correlation Structures
+
+
+#### Fit the models - Main effects to determine correlation structure
 
 **Use the `gee()` function from the `gee` package for the results to be used in a `texreg::knitreg()` tables.**
 
@@ -416,7 +457,7 @@ summary(btb_gee_un)
 
 
 
-### Parameter Estimates Table
+#### Parameter Estimates Table
 
 
 ```{r,  results='asis'}
@@ -437,7 +478,7 @@ texreg::knitreg(list(btb_lm_1,
 
 
 
-### Re-Fit Models
+#### Re-Fit Models
 
 **Use the `geeglm()` function from the `geepack` package for the results to be used in a `anova()` table and interaction plots.**
 
@@ -475,7 +516,7 @@ btb_geeglm_un <- geepack::geeglm(bdi ~ bdi.pre + length + drug + treatment + mon
 ```
 
 
-### Can't Use the Likelihood Ratio Test
+> Can't Use the Likelihood Ratio Test
 
 The `anova()` function is used to compare nested models for parameters (fixed effects), not correlation structures.
 
@@ -487,7 +528,7 @@ anova(btb_geeglm_in, btb_geeglm_un)
 
 
 
-### Variaous QIC Measures of Fit
+#### Variaous QIC Measures of Fit
 
 References:
 
@@ -546,7 +587,20 @@ MuMIn::model.sel(btb_geeglm_in,
 
 
 
-### Plot the model predictions
+
+### Final "Best" Model
+
+#### Tabulate Model Parameters
+
+```{r,  results='asis'}
+texreg::knitreg(list(btb_gee_ex),
+                custom.model.names = c("GEE-ex"),
+                single.row = TRUE,
+                caption = "Final GEE, exchangeable correlation")
+```
+
+
+#### Plot the Marginal Effects
 
 
 ```{r}
@@ -782,3 +836,14 @@ interactions::interact_plot(model = btb_geeglm_ex,
 ```
 
 
+## Conclusion
+
+**The Research Question**
+
+Does the Beat-the-Blues program 
+
+Net of other factors (use of antidepressants and length of the current episode), does the Beat-the-Blues program results in better depression trajectories over treatment as usual?
+
+**The Conclusion**
+
+There is no evidence that depression trajectories differ between participants randomized to the Beat the Blues program or the Treatment as Usual condition, after accounting for covariates and the correlation between repeated measurements.
